Infra.Generated/templates/bank-gateway/bank-gateway.yaml
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "Gateway"
metadata:
  name: "bank-gateway"
  annotations:
    metallb.io/loadBalancerIPs: "192.168.0.30"
spec:
  gatewayClassName: "bank-gateway-class"
  listeners:
    - name: "http"
      protocol: "HTTP"
      port: 80
      allowedRoutes:
        namespaces:
          from: "Same"
    - name: "https"
      protocol: "HTTPS"
      port: 443
      hostname: "guanchen.nl"
      tls:
        mode: "Terminate"
        certificateRefs:
          - name: "bank-gateway-tls"
      allowedRoutes:
        namespaces:
          from: "Same"
