Infra.Generated/templates/bank-gateway/route.yaml
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "HTTPRoute"
metadata:
  name: "bank-gateway-route"
spec:
  parentRefs:
    - name: "bank-gateway"
  hostnames:
    - "guanchen.nl"
  rules:
    - matches:
        - path:
            type: "PathPrefix"
            value: "/v1"
      backendRefs:
        - name: "bank-api-service"
          port: 8080
    - matches:
        - path:
            type: "PathPrefix"
            value: "/v2"
      backendRefs:
        - name: "bank-api-beta-service"
          port: 8080
    - matches:
        - path:
            type: "PathPrefix"
            value: "/mcp"
      backendRefs:
        - name: "bank-api-mcp-service"
          port: 8080
